# vectlib

./: .gitignore  CMakeLists.txt  README.md
include/vect/: vector.hpp
include/vect/core/: mat_expr.hpp  matrix.hpp  scalar.hpp  vec_expr.hpp  vec_expr_iterator.hpp  vector.hpp  vector_iterator.hpp
include/vect/detail/: defer_eval.hpp  mat_defer_eval.hpp  simd_comparison.hpp  simd_mask.hpp  simd_packet.hpp  simd_packet_2d.hpp  simd_packet_4d.hpp  simd_packet_4f.hpp  simd_packet_4i.hpp  simd_packet_8f.hpp  simd_packet_8i.hpp  simd_reduction.hpp  simd_resolver.hpp  simd_select_mask.hpp  simd_swizzle.hpp  simd_traits.hpp  vector_method.hpp
include/vect/expr/: binary_op.hpp  capture_strategy.hpp  mat_binary_op.hpp  mat_column_view.hpp  mat_method.hpp  mat_operator.hpp  mat_slice.hpp  mat_strided_row_view.hpp  mat_unary_op.hpp  mat_vec_broadcast.hpp  swizzle.hpp  unary_op.hpp  vector.hpp  vector_method.hpp  vector_operator.hpp  vector_view.hpp  where_op.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_mat_methods.cpp  test_vector_methods.cpp
